Fix Safari overflow bug

--- a/resources/components/common.less
+++ b/resources/components/common.less
@@ -361,8 +361,7 @@ a {
                 top: @header-height;
                 right: 0;
                 padding: @margin-side * 2 @margin-side;
-                color: #cccccc;
-                overflow: auto;
+                color: @base-70;
 
                 &::-webkit-scrollbar {
                     width: 0; // Hide bar on toc
